// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProfileProvider > renders children 1`] = `
<body>
  <div>
    <h1>
      Hello, world!
    </h1>
  </div>
</body>
`;

exports[`ProfileProvider > restores profile from storage 1`] = `
<body>
  <div>
    <h1>
      Hello, world!
    </h1>
  </div>
</body>
`;

exports[`ProfileSelect > displays empty string if no name is passed 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <div>
        Profile is missing.
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-2 rounded-md bg-white pl-4 pr-3 py-2.5 text-sm font-light text-gray-700 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:re:"
        type="button"
      >
        <span>
          undefined@example.com
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > displays localhost if no host is passed 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-2 rounded-md bg-white pl-4 pr-3 py-2.5 text-sm font-light text-gray-700 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:r8:"
        type="button"
      >
        <span>
          localhost
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > displays no profile selected state 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-2 rounded-md bg-white pl-4 pr-3 py-2.5 text-sm font-light text-gray-700 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:rq:"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-yellow-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M9.401 3.003c1.155-2 4.043-2 5.197 0l7.355 12.748c1.154 2-.29 4.5-2.599 4.5H4.645c-2.309 0-3.752-2.5-2.598-4.5L9.4 3.003ZM12 8.25a.75.75 0 0 1 .75.75v3.75a.75.75 0 0 1-1.5 0V9a.75.75 0 0 1 .75-.75Zm0 8.25a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Profile
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > displays profile missing message 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <div>
        Profile is missing.
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-2 rounded-md bg-white pl-4 pr-3 py-2.5 text-sm font-light text-gray-700 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:rk:"
        type="button"
      >
        <span>
          undefined@example.com
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > renders profiles with localhost when no host specified 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-2 rounded-md bg-white pl-4 pr-3 py-2.5 text-sm font-light text-gray-700 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:r16:"
        type="button"
      >
        <span>
          localhost
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;

exports[`ProfileSelect > renders with standard options 1`] = `
<body>
  <div>
    <div
      class="relative"
      data-headlessui-state=""
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        class="flex items-center gap-2 rounded-md bg-white pl-4 pr-3 py-2.5 text-sm font-light text-gray-700 focus:outline-none dark:text-gray-300 dark:hover:text-gray-200 dark:bg-gray-900"
        data-headlessui-state=""
        id="headlessui-menu-button-:r2:"
        type="button"
      >
        <span>
          undefined@example.com
        </span>
        <svg
          aria-hidden="true"
          class="h-4 w-4 text-gray-400"
          data-slot="icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</body>
`;
